--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "morrisjs": "~0.5.1",
     "datatables-responsive": "1.0.6",
     "bootstrap-social": "~4.8.0",
-    "flot.tooltip": "~0.8.4"
+    "flot.tooltip": "~0.8.4",
+    "angular-ui-router": "^0.3.1"
   }
 }
