--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap-social": "~4.8.0",
     "flot.tooltip": "~0.8.4",
     "angular-ui-router": "^0.3.1",
-    "angular-resource" : ""
+    "angular-resource": "",
+    "bootstrap-select": "^1.11.2"
   }
 }
