--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chart.js": "^2.2.2",
     "couleurs": "^6.0.3",
     "express": "^4.14.0"
   }
