--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.15.2",
     "chart.js": "^2.2.2",
     "couleurs": "^6.0.3",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "jquery": "^3.1.0"
   }
 }
