--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,10 @@
     "flot.tooltip": "~0.8.4",
     "angular-ui-router": "^0.3.1",
     "angular-resource": "",
-    "bootstrap-select": "^1.11.2"
+    "bootstrap-select": "^1.11.2",
+    "angular-pdf": "^1.3.0"
+  },
+  "resolutions": {
+    "angular": "~1.5.0"
   }
 }
