--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-ui-router": "^0.3.1",
     "angular-resource": "",
     "bootstrap-select": "^1.11.2",
-    "angular-pdf": "^1.3.0"
+    "angular-pdf": "^1.3.0",
+    "TableDnD": "https://github.com/isocra/TableDnD.git#^0.9.1"
   },
   "resolutions": {
     "angular": "~1.5.0"
