--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,13 @@
     "angular-resource": "",
     "bootstrap-select": "^1.11.2",
     "angular-pdf": "^1.3.0",
-    "TableDnD": "https://github.com/isocra/TableDnD.git#^0.9.1"
+    "angular-ui-tinymce": "^0.0.17",
+    "textAngular": "^1.5.10"
   },
   "resolutions": {
     "angular": "~1.5.0"
+  },
+  "devDependencies": {
+    "angular-ui-tinymce": "^0.0.17"
   }
 }
