--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chart.js": "^2.2.2",
+    "ckeditor": "^4.5.11",
     "couleurs": "^6.0.3",
     "express": "^4.14.0",
     "jquery": "^3.1.0"
